# world-ruin

./: .gitignore  CMakeLists.txt  controls.md  optimizations.md  profile_parser.py  release.py
include/Config/: BuildingsConfig.hpp  DeveloperConfig.hpp  ResourceConfig.hpp  UnitConfig.hpp  WorldConfig.hpp
include/Core/: Math.hpp  Profiler.hpp  ThreadPool.hpp  Types.hpp
include/ECS/: Components.hpp  Tags.hpp
include/Input/: CursorBuilderSystem.hpp  CursorClickSystem.hpp  CursorDragSystem.hpp  CursorHandler.hpp  CursorRaycast.hpp  CursorTaskSystem.hpp
include/Input/CursorTaskSystem/: TaskAreaManager.hpp  TaskDropoffManager.hpp  TaskFinalizer.hpp
include/Rendering/: Camera.hpp  Perspective.hpp  RenderContext.hpp  RenderSystem.hpp  TileHandler.hpp
include/Rendering/Renderers/: CanopyRenderer.hpp  DebugRenderer.hpp  EntityDebugRenderer.hpp  EntityRenderer.hpp  FoamRenderer.hpp  GeometryRenderer.hpp  HUDRenderer.hpp  OverlayRenderer.hpp
include/Rendering/Renderers/Overlay/: OverlayPolygons.hpp  OverlayText.hpp  OverlayText_BuilderMode.hpp  OverlayText_NormalMode.hpp  OverlayText_TaskMode.hpp  OverlayText_World.hpp  OverlayUtils.hpp
include/Rendering/Utils/: FastSorter.hpp
include/Simulation/Environment/: DebrisSystem.hpp  ResourceSystem.hpp  ResourceUpdateSystem.hpp
include/Simulation/Unit/: UnitAnimationSystem.hpp  UnitCombatSystem.hpp  UnitCommandSystem.hpp  UnitControlSystem.hpp  UnitMovementSystem.hpp  UnitPhysicsSystem.hpp  UnitTaskSystem.hpp
include/Simulation/Unit/Combat/: CombatActionResolver.hpp  CombatAnimation.hpp  CombatMovement.hpp
include/Simulation/World/: ChunkSimulation.hpp  OverseerSystem.hpp  PathfindingSystem.hpp  TaskSystem.hpp
include/World/: Biomes.hpp  Chunk.hpp  ChunkManager.hpp
include/World/Generation/: RiverGenerator.hpp  WorldGenerator.hpp
include/World/Meshing/: ChunkLODMesher.hpp  ChunkMesher.hpp  MeshingContext.hpp  MeshingPasses.hpp
pack/Tiny Swords (Free Pack)/Terrain/: build_atlas.py
pack/Tiny Swords (Free Pack)/Terrain/Decorations/Bushes/: build_atlas.py
pack/Tiny Swords (Free Pack)/Terrain/Decorations/Rocks/: build_atlas.py
pack/Tiny Swords (Free Pack)/Terrain/Resources/Wood/Trees/: build_atlas.py
pack/Tiny Swords (Free Pack)/Terrain/Tileset/: build_atlas.py
src/: main.cpp
src/Core/: ThreadPool.cpp
src/Input/: CursorBuilderSystem.cpp  CursorClickSystem.cpp  CursorDragSystem.cpp  CursorHandler.cpp  CursorRaycast.cpp  CursorTaskSystem.cpp
src/Input/CursorTaskSystem/: TaskAreaManager.cpp  TaskDropoffManager.cpp  TaskFinalizer.cpp
src/Rendering/: Camera.cpp  Perspective.cpp  RenderSystem.cpp  TileHandler.cpp
src/Rendering/Renderers/: CanopyRenderer.cpp  DebugRenderer.cpp  EntityDebugRenderer.cpp  EntityRenderer.cpp  FoamRenderer.cpp  GeometryRenderer.cpp  HUDRenderer.cpp  OverlayRenderer.cpp
src/Rendering/Renderers/Overlay/: OverlayPolygons.cpp  OverlayText.cpp  OverlayText_BuilderMode.cpp  OverlayText_NormalMode.cpp  OverlayText_TaskMode.cpp  OverlayText_World.cpp  OverlayUtils.cpp
src/Rendering/Utils/: FastSorter.cpp
src/Simulation/: BuildingPlacement.cpp
src/Simulation/Environment/: DebrisSystem.cpp  ResourceSystem.cpp  ResourceUpdateSystem.cpp
src/Simulation/Unit/: UnitAnimationSystem.cpp  UnitCombatSystem.cpp  UnitCommandSystem.cpp  UnitControlSystem.cpp  UnitMovementSystem.cpp  UnitPhysicsSystem.cpp  UnitTaskSystem.cpp
src/Simulation/Unit/Combat/: CombatAnimation.cpp  CombatMovement.cpp
src/Simulation/Unit/Combat/CombatActionResolver/: BuilderResolver.cpp  CombatActionResolver.cpp  CourierResolver.cpp  HarvesterResolver.cpp
src/Simulation/Unit/UnitControlSystem/: UnitCommandInterface.cpp  UnitControlSystem.cpp  UnitJobAssignment.cpp  UnitPhysicsExecution.cpp
src/Simulation/World/: ChunkSimulation.cpp  PathfindingSystem.cpp  TaskSystem.cpp
src/Simulation/World/Overseer/: OverseerDemographics.cpp  OverseerExpansion.cpp  OverseerSystem.cpp
src/Simulation/World/Overseer/OverseerEconomy/: EconomyManager.cpp  HarvestDirector.cpp  LogisticsDirector.cpp
src/World/: ChunkManager.cpp  ChunkManager_Finalize.cpp
src/World/Generation/: RiverGenerator.cpp  WorldGenerator.cpp  WorldGenerator_Chunk.cpp  WorldGenerator_Noise.cpp
src/World/Meshing/: ChunkLODMesher.cpp  ChunkMesher.cpp  MeshingPasses.cpp  MeshingUtils.cpp
